--- a/lib/mymapsv1_web/templates/layout/app.html.eex
+++ b/lib/mymapsv1_web/templates/layout/app.html.eex
@@ -25,6 +25,79 @@
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
       <%= render @view_module, @view_template, assigns %>
     </main>
+
+    
     <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+    <script>
+    var map, infoWindow;
+    function initMap() {
+      console.log("inside init");
+
+
+      map = new google.maps.Map(document.getElementById('map'), {
+        center: {lat: -34.397, lng: 150.644},
+        zoom: 6
+      });
+
+
+
+      infoWindow = new google.maps.InfoWindow;
+
+      // Try HTML5 geolocation.
+      if (navigator.geolocation) {
+        console.log("inside geolocation");
+        navigator.geolocation.getCurrentPosition(function(position) {
+          var pos = {
+            lat: position.coords.latitude,
+            lng: position.coords.longitude
+          };
+
+          infoWindow.setPosition(pos);
+
+          infoWindow.setContent('Location found.');
+
+          infoWindow.open(map);
+          map.setCenter(pos);
+        }, function() {
+          handleLocationError(true, infoWindow, map.getCenter());
+        });
+      } else {
+        // Browser doesn't support Geolocation
+        handleLocationError(false, infoWindow, map.getCenter());
+      }
+    }
+
+    function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+      infoWindow.setPosition(pos);
+      infoWindow.setContent(browserHasGeolocation ?
+                            'Error: The Geolocation service failed.' :
+                            'Error: Your browser doesn\'t support geolocation.');
+      infoWindow.open(map);
+    }
+
+    function all_posi(){
+      console.log("inside all_posi");
+      $(document).ready(function() { 
+        $.ajax({
+        url: `/employees/all_posi`,
+        type: "PATCH",
+        async: true,
+        data: 1,
+        processData: false,
+        contentType: false,
+
+        success: function(user_as_string) {
+          user_as_json = jQuery.parseJSON(user_as_string)
+          console.log(user_as_json)
+        }
+        });
+      });
+    }
+    ////////////////////////////////////////////////////
+    //initMap();
+
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfTyk0hv9weu0SVk7Ri4eG5ZI4oAjjj1I&callback=initMap"></script>
   </body>
 </html>
